--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-        <script src ="node_modules/rot-js/lib/rot.js"></script>
-        <script src ="src/index.js"></script>
+        <script src ="bower_components/rot.js/rot.js"></script>
+        <script src ="src/js/index.js"></script>
+        <link rel="stylesheet" type="text/css" href="src/css/index.css" />
     </head>
     <body>
-        <p>Test</p>
     </body>
 </html>
