Bringing in jsrogue

--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
 <html>
     <head>
         <script src ="bower_components/rot.js/rot.js"></script>
-        <script src ="src/js/index.js"></script>
+        <!-- src -->
+        <script src="src/js/sprintf.min.js"></script>
+        <script src="src/js/game.js"></script>
+        <script src="src/js/utilities.js"></script>
+        <script src="src/js/geometry.js"></script>
+        <script src="src/js/screens.js"></script>
+        <script src="src/js/glyph.js"></script>
+        <script src="src/js/dynamicglyph.js"></script>
+        <script src="src/js/tile.js"></script>
+        <script src="src/js/builder.js"></script>
+        <script src="src/js/map.js"></script>
+        <script src="src/js/entity.js"></script>
+        <script src="src/js/entitymixins.js"></script>
+        <script src="src/js/item.js"></script>
+        <script src="src/js/itemmixins.js"></script>
+        <script src="src/js/repository.js"></script>
+        <script src="src/js/entities.js"></script>
+        <script src="src/js/items.js"></script>
+        <script src="src/js/maps/cave.js"></script>
+        <script src="src/js/maps/bosscavern.js"></script>
+        
         <link rel="stylesheet" type="text/css" href="src/css/index.css" />
     </head>
     <body>
