Adding type script

--- a/index.html
+++ b/index.html
@@ -20,20 +20,19 @@
         <script src="src/js/items.js"></script>
         <script src="src/js/maps/cave.js"></script>
         <script src="src/js/maps/bosscavern.js"></script>
-        <!-- screems -->
+        <!-- screens -->
+        <script src="src/js/screens/itemlist.js"></script>
+        <script src="src/js/screens/targetbased.js"></script>
         <script src="src/js/screens/drop.js"></script>
         <script src="src/js/screens/eat.js"></script>
         <script src="src/js/screens/examine.js"></script>
         <script src="src/js/screens/gainstat.js"></script>
         <script src="src/js/screens/help.js"></script>
         <script src="src/js/screens/inventory.js"></script>
-        <script src="src/js/screens/itemlist.js"></script>
         <script src="src/js/screens/look.js"></script>
-        <script src="src/js/screens/menu.js"></script>
         <script src="src/js/screens/pickup.js"></script>
         <script src="src/js/screens/play.js"></script>
         <script src="src/js/screens/start.js"></script>
-        <script src="src/js/screens/targetbased.js"></script>
         <script src="src/js/screens/wear.js"></script>
         <script src="src/js/screens/wield.js"></script>
         <script src="src/js/screens/win.js"></script>
