Setting up typescript, jasmine, beggining traits

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         <script src="src/js/screens/wear.js"></script>
         <script src="src/js/screens/wield.js"></script>
         <script src="src/js/screens/win.js"></script>
-        
+        <script src="dist/bundle.js"></script>
+
         <link rel="stylesheet" type="text/css" href="src/css/index.css" />
     </head>
     <body>
