Better setup, testing and browser stuff separated now

--- a/index.html
+++ b/index.html
@@ -36,8 +36,12 @@
         <script src="src/js/screens/wear.js"></script>
         <script src="src/js/screens/wield.js"></script>
         <script src="src/js/screens/win.js"></script>
-        <script src="dist/bundle.js"></script>
 
+        <!-- generated -->
+        <script src="dist/Traits.js"></script>
+        <script src="dist/Main.js"></script>
+
+        <!-- styles -->
         <link rel="stylesheet" type="text/css" href="src/css/index.css" />
     </head>
     <body>
