--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <script src="src/js/screens/examine.js"></script>
         <script src="src/js/screens/gainstat.js"></script>
         <script src="src/js/screens/help.js"></script>
+        <script src="src/js/screens/trait.js"></script>
         <script src="src/js/screens/inventory.js"></script>
         <script src="src/js/screens/look.js"></script>
         <script src="src/js/screens/pickup.js"></script>
