Tweaking the UI

--- a/index.html
+++ b/index.html
@@ -46,5 +46,18 @@
         <link rel="stylesheet" type="text/css" href="src/css/index.css" />
     </head>
     <body>
+        <div id="gameContainer"></div>
+        <div class="gameInfo">
+            <p>Expirimenting with Typescript, jsrogue, and Rot.js - good times!</p>
+            <p>Check out the source on <a href="https://github.com/thejoezack/biomass">Github</a></p>
+            <p>Having a rough time with the game? Here are a couple tips...
+                <ul>
+                    <li>Hit [?] to bring up the keys</li>
+                    <li>Press [t] access the expirimental traits menu</li>
+                    <li>You can "dig" through walls, try running into one</li>
+                    <li>You can eat corpses, pickup all the things, eat all the things</li>
+                </ul>
+            </p>
+        </div>
     </body>
 </html>
