Fixing up after split

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <script src="src/js/screens/win.js"></script>
 
         <!-- generated -->
+        <script src="dist/TreeNodes.js"></script>
         <script src="dist/Traits.js"></script>
         <script src="dist/Main.js"></script>
 
