Showing items on screen

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
         <!-- generated -->
         <script src="dist/TreeNodes.js"></script>
+        <script src="dist/Items.js"></script>
         <script src="dist/Traits.js"></script>
         <script src="dist/Main.js"></script>
 
